Update to MDT 0.0.2

--- a/.github/workflows/pullrequest_workflow.yml
+++ b/.github/workflows/pullrequest_workflow.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           persist-credentials: true
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/hyperk/hk-meta-recon:latest
+        run: docker build . --file Dockerfile --tag ghcr.io/hyperk/hk-meta-sim:latest
